Fixed code overlap
Fixed code overlap bug

--- a/python/py.css
+++ b/python/py.css
@@ -28,6 +28,7 @@ body {
       color: blue;
     }
 code{
+  line-height: 20px;
   background-color: rgba(2, 2, 2, 0.1);
   border-radius: 4px;
   padding: 2px;
